[package]
name = "tpk"
authors = ["Laurent T. Fourrier <ltfourrier@gmail.com>"]
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "A (de)serialization crate for TPK data"
homepage = "https://github.com/ltfourrier/tpk-spec"
documentation = "https://docs.rs/tpk"
repository = "https://github.com/ltfourrier/tpk-rust"
readme = "README.md"
keywords = ["serialization", "format", "tpk"]
categories = ["encoding"]
edition = "2021"

[dependencies]
thiserror = "1.0"
byteorder = "1.4"